--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,34 @@
-.Card {
-  border: 2px solid #a2a5a2b4;
-  margin: 0.5rem;
-  padding: 1rem;
-  display: flex;
-  width: 50%;
+ul {
+  box-sizing: border-box;
+  width: 85%;
+  border: 3px solid #0dc9ebb4;
   border-radius: 15px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.Card {
+  width: 45%;
+  max-width: 350px;
+  display: flex;
+  margin: 1rem;
+  flex-direction: row;
+  background-color: brown;
+  border: 2px solid #a2a5a2b4;
+  padding: 1rem;
+  border-radius: 15px;
+  box-shadow: 3px 3px teal;
 }
 .Card div p:nth-child(1) {
   font-weight: bold;
+}
+.Card:hover {
+  box-shadow: inset 3px 3px teal, 3px 3px teal;
+}
+p {
+  color: bisque;
+}
+p span {
+  color: black;
 }
