Mise en place d'une route pour 1 pokemon, useHistory

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ ul {
 .Card {
   margin: 1rem;
   width: 350px;
+  height: 255px;
   display: flex;
   flex-direction: row;
   background-color: brown;
